# taskmaster

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile
.ssh/: config
config_files/: main.yml
config_files/functionalities/: stress_test.yml  truncate.yml  umask.yml
config_files/parsing/: cmd_not_provided.yml  shell_parsing_bad.yml  umask_not_valid_1.yml  working_dir_too_big.yml
config_files/test/: cmd_empty.yml  cmd_whitespaces_before_and_after.yml  main.yml  rmrf.yml  shell_parsing_good.yml  stdout_path_with_spaces.yml  tail.yml  umask_not_valid_2.yml  umask_not_valid_3.yml  working_dir_with_spaces.yml
config_files/test_functionalities/: pwd.yml  rmrf.yml  stop_show_signal.yml  tail.yml  unexpected.yml
config_files/test_parsing/: cmd_white_spaces.yml  config_only_cmd.yml  stderr_path_with_spaces.yml
http_logging/: http_logging.py
scripts/: catch_sighup.py  echo_answer.sh  echo_answer_inf_loop.sh  logging_bonus.py  print_hello.py  show_signal.py  sleep_ls.sh  stdout_stderr.sh  truncate.sh  umask.sh
src/client/: actions_tmp.rs  main.rs
src/core/: lib.rs
src/core/api/: error_log.rs  mod.rs
src/core/data/: mod.rs
src/server/: main.rs
src/server/api/: action.rs  error_log.rs  mod.rs
src/server/core/: configuration.rs  logger.rs  mod.rs  task.rs
src/server/monitor/: mod.rs
taskmasterctl/: argument.py  taskmasterctl.py
taskmasterd/: Cargo.toml
taskmasterd/src/: action.rs  configuration.rs  logger.rs  main.rs  monitor.rs  responder.rs  sighup_handler.rs  task.rs  utils.rs
taskmasterd/src/api/: action.rs  mod.rs  responder.rs
(+5 files in other folders)
